--- a/safetyapp-backend/package.json
+++ b/safetyapp-backend/package.json
@@ -10,8 +10,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "firebase-admin": "^13.4.0",
+    "jsonwebtoken": "^9.0.2",
     "twilio": "^5.5.0"
   }
 }
