--- a/.gitignore
+++ b/.gitignore
@@ -13,5 +13,6 @@
 .externalNativeBuild
 .cxx
 local.properties
-# safetyapp-backend/.env
+safetyapp-backend/.env
+safetyapp-backend/serviceAccountKey.json
 
